--- a/考試.md
+++ b/考試.md
@@ -1,6 +1,7 @@
 # computer netwokr計算機網路 網路概論-
 說明OSI Model與 TCP/IP protocol
 ![協定protocol](osi.jpg)
+![協定protocol](osi2.jpg)
 # 協定protocol
 
 何謂communcation protocol[簡稱協定protocol]?
